--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
-BACKEND_PORT=8000
-FRONTEND_PORT=3000
+BACKEND_SERVICE_CONTAINER_NAME=logforge-backend
+BACKEND_SERVICE_PORT=8000
+EXPOSED_BACKEND_PORT=8000
+
+FRONTEND_SERVICE_CONTAINER_NAME=logforge-frontend
+FRONTEND_SERVICE_PORT=3000
+EXPOSED_FRONTEND_PORT=3000
