--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,33 @@
-version: '3.9'
+version: "3.9"
 
 services:
   logforge-backend:
     image: madanb13/logforge-backend:latest
-    container_name: logforge-backend
-    restart: always
+    container_name: ${BACKEND_SERVICE_CONTAINER_NAME:-logforge-backend}
+    environment:
+      PORT: "${BACKEND_SERVICE_PORT:-8000}"
+    networks:
+      - logforge-network
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
+    restart: always
     ports:
-      - "${BACKEND_PORT:-8000}:8000"
+      - "${EXPOSED_BACKEND_PORT:-8000}:${BACKEND_SERVICE_PORT:-8000}"
 
   logforge-frontend:
     image: madanb13/logforge-frontend:latest
-    container_name: logforge-frontend
-    restart: always
+    container_name: ${FRONTEND_SERVICE_CONTAINER_NAME:-logforge-frontend}
+    environment:
+      VITE_BACKEND_SERVICE_HOST: "http://${BACKEND_SERVICE_CONTAINER_NAME:-logforge-backend}"
+      VITE_BACKEND_SERVICE_PORT: "${BACKEND_SERVICE_PORT:-8000}"
+      VITE_EXPOSED_BACKEND_PORT: "${EXPOSED_BACKEND_PORT:-8000}"
     ports:
-      - "${FRONTEND_PORT:-3000}:3000"
+      - "${EXPOSED_FRONTEND_PORT:-3000}:${FRONTEND_SERVICE_PORT:-3000}"
+    networks:
+      - logforge-network
+    depends_on:
+      - logforge-backend
+
+networks:
+  logforge-network:
+    driver: bridge
