--- a/.env
+++ b/.env
@@ -1,7 +1,11 @@
-BACKEND_SERVICE_CONTAINER_NAME=logforge-backend
-BACKEND_SERVICE_PORT=8000
-EXPOSED_BACKEND_PORT=8000
+BACKEND_SERVICE_CONTAINER_NAME="logforge-backend"
+BACKEND_SERVICE_PORT="8000"
+EXPOSED_BACKEND_PORT="8000"
 
-FRONTEND_SERVICE_CONTAINER_NAME=logforge-frontend
-FRONTEND_SERVICE_PORT=3000
-EXPOSED_FRONTEND_PORT=3000
+FRONTEND_SERVICE_CONTAINER_NAME="logforge-frontend"
+FRONTEND_SERVICE_PORT="3000"
+EXPOSED_FRONTEND_PORT="3000"
+
+NOTIFIER_SERVICE_CONTAINER="logforge-notifier"
+NOTIFIER_PLAIN_PORT="8083"
+NOTIFIER_WEB_PORT="8085"
