--- a/.env
+++ b/.env
@@ -8,4 +8,6 @@ EXPOSED_FRONTEND_PORT="3000"
 
 NOTIFIER_SERVICE_CONTAINER="logforge-notifier"
 NOTIFIER_PLAIN_PORT="8083"
-NOTIFIER_WEB_PORT="8085"
+NOTIFIER_WEB_PORT="8086"
+
+AUTOUPDATE_SERVICE_NAME="logforge-autoupdate"
