--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       - logforge-network
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
+      - logforge_core_data:/app/core/data
     restart: always
     ports:
       - "${EXPOSED_BACKEND_PORT:-8000}:${BACKEND_SERVICE_PORT:-8000}"
@@ -61,3 +62,4 @@ networks:
 
 volumes:
   logforge_notifier_data:
+  logforge_core_data:
