--- a/.env
+++ b/.env
@@ -1,13 +1,15 @@
-BACKEND_SERVICE_CONTAINER_NAME="logforge-backend"
-BACKEND_SERVICE_PORT="8000"
-EXPOSED_BACKEND_PORT="8000"
+# Container names
+LOGFORGE_BACKEND_CONTAINER_NAME=logforge-backend
+LOGFORGE_FRONTEND_CONTAINER_NAME=logforge-frontend
+ALERT_ENGINE_BACKEND_CONTAINER_NAME=logforge-alert-backend
+ALERT_ENGINE_FRONTEND_CONTAINER_NAME=logforge-alert-frontend
+AUTOUPDATE_SERVICE_NAME=logforge-autoupdate
+NOTIFIER_SERVICE_CONTAINER_NAME=logforge-notifier
 
-FRONTEND_SERVICE_CONTAINER_NAME="logforge-frontend"
-FRONTEND_SERVICE_PORT="3000"
-EXPOSED_FRONTEND_PORT="3000"
+# Host ports exposed by default
+LOGFORGE_FRONTEND_PORT=3008
+NOTIFIER_WEB_PORT=8087
+ALERT_ENGINE_FRONTEND_PORT=3033
 
-NOTIFIER_SERVICE_CONTAINER="logforge-notifier"
-NOTIFIER_PLAIN_PORT="8083"
-NOTIFIER_WEB_PORT="8086"
-
-AUTOUPDATE_SERVICE_NAME="logforge-autoupdate"
+#auto-update on/off
+AUTO_UPDATE=true
