--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
     - VITE_NOTIFIER_PORT=${NOTIFIER_WEB_PORT}
     - VITE_ALERT_ENGINE_PORT=${ALERT_ENGINE_FRONTEND_PORT}
     ports:
-      - "${LOGFORGE_FRONTEND_PORT:-3008}:3000"
+      - "127.0.0.1:${LOGFORGE_FRONTEND_PORT:-3008}:3000"
     networks:
       - logforge-network
     restart: unless-stopped
@@ -31,7 +31,7 @@ services:
     image: madanb13/logforge-notifier:v2.0.0
     container_name: ${NOTIFIER_SERVICE_CONTAINER_NAME:-logforge-notifier}
     ports:
-      - "${NOTIFIER_WEB_PORT:-8087}:8085"
+      - "127.0.0.1:${NOTIFIER_WEB_PORT:-8087}:8085"
     volumes:
       - logforge_notifier_data:/app/data
       - /etc/localtime:/etc/localtime:ro
@@ -75,7 +75,7 @@ services:
     container_name: ${ALERT_ENGINE_FRONTEND_CONTAINER_NAME:-logforge-alert-frontend}
     image: madanb13/logforge-alert-frontend:v2.0.0
     ports:
-      - "${ALERT_ENGINE_FRONTEND_PORT:-3033}:3033"
+      - "127.0.0.1:${ALERT_ENGINE_FRONTEND_PORT:-3033}:3033"
     environment:
     - ALERT_ENGINE_FRONTEND_PORT=${ALERT_ENGINE_FRONTEND_PORT:-3033}
     depends_on:
